# whitespace_converter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: args.rs  indentation.rs  main.rs  new_line.rs
