[package]
name = "whitespace_converter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
paw = "1.0.0"
regex = "1.5.4"
structopt = { version = "0.3.22", features = [ "paw" ] }
tempfile = "3.2.0"
