[package]
name = "whitespace_converter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
paw = "1.0.0"
structopt = { version = "0.3.22", features = [ "paw" ] }

[[bin]]
name = "wsc"
path = "src/main.rs"
